--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
     </head>
     <body>
         <header>
-            <section class="welcome">
+            <div class="welcome">
                 <h1>Bem Vindo,</h1>
                 <p>embarque nesta aventura, faça seu login!</p>
-            </section>
+            </div>
         </header>
         <main>
-           <section>
-                <div class="capuz"></div>
-                <div class="rosto"></div>
-                <div class="olho-esq"></div>
-                <div class="olho-dir"></div>
-           </section>
-           <section>
-               <form class="form">
-                    <input class="email" type="email" name="Email" placeholder="Email" required>
-                    <input class="password" type="password" name="password" placeholder="Password" required>
-                    <button>entrar</button>
-               </form>
+           <section class="finn-container">
+                <div class="capuz">
+                    <div class="rosto">
+                        <di class="olhos">
+                            <div class="olho-esq"></div>
+                            <div class="olho-dir"></div>
+                        </di>
+                        <form class="form">
+                            <input class="email" type="email" name="Email" placeholder="Email" required>
+                            <input class="password" type="password" name="password" placeholder="Password" required>
+                            <button>entrar</button>
+                       </form>
+                    </div>
+                </div>
            </section>
         </main>
     </body>
